--- a/style/style.scss
+++ b/style/style.scss
@@ -238,7 +238,7 @@ swiper-container:not(.swiper-watch-progress) .swiper-lazy-preloader {
 }
 
 .swiper-virtual .swiper-slide {
-  -webkit-backface-visibility: hidden;
+  // -webkit-backface-visibility: hidden;
   transform: translateZ(0)
 }
 
@@ -526,7 +526,7 @@ button.swiper-pagination-bullet {
 .swiper-scrollbar {
   border-radius: var(--swiper-scrollbar-border-radius, 10px);
   position: relative;
-  -ms-touch-action: none;
+  // -ms-touch-action: none;
   background: var(--swiper-scrollbar-bg-color, rgba(0, 0, 0, .1))
 }
 
@@ -986,7 +986,6 @@ p {
       gap: 2.5vw;
 
       .section-2__item {
-        // padding-top: 1vw;
         padding: 1vw 2.25vw 1vw 2.25vw;
         display: flex;
         justify-content: center;
@@ -994,9 +993,15 @@ p {
         border: .16vw solid var(--red);
         border-radius: 6.66vw;
         font-size: 2vw;
+        background-color: white;
         color: var(--red);
         cursor: pointer;
+        transition: .4s;
 
+        // &:hover {
+        //   background-color: var(--red);
+        //   color: white;
+        // }
       }
 
       .selected {
@@ -1013,105 +1018,60 @@ p {
       width: 100%;
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: space-evenly;
       // align-items: center;
       gap: 1.5vw;
 
-      .acoustic-guitar {
-        min-width: 27vw;
+      .card {
         height: 14vw;
-        border-radius: 2vw;
-        border: .16vw solid var(--red);
-        background: url('../assets/acoustic-guitar.png');
-        background-color: red;
-        background-size: 100%;
-        background-repeat: no-repeat;
 
         display: flex;
         justify-content: center;
-
-        position: relative;
-      }
-
-      .electric-guitar {
-        min-width: 27vw;
-        height: 14vw;
-        border-radius: 2vw;
-        border: .16vw solid var(--red);
-        background: url('../assets/acoustic-guitar.png');
-        background-color: red;
-        background-size: 100%;
-        background-repeat: no-repeat;
-
-        display: flex;
-        justify-content: center;
+        align-items: center;
 
         position: relative;
 
-      }
+        .img-container {
+          width: 100%;
+          height: 100%;
+        }
 
-      .bass-guitar {
-        min-width: 27vw;
-        height: 14vw;
-        border-radius: 2vw;
-        border: .16vw solid var(--red);
-        background: url('../assets/acoustic-guitar.png');
-        background-color: red;
-        background-size: 100%;
-        background-repeat: no-repeat;
+        .card-container {
+          width: 100%;
+          height: 100%;
 
-        display: flex;
-        justify-content: center;
+          position: absolute;
+          top: 0;
+          left: 0;
 
-        position: relative;
-      }
 
-      .pop-vocal {
-        min-width: 27vw;
-        height: 14vw;
-        border-radius: 2vw;
-        border: .16vw solid var(--red);
-        background: url('../assets/acoustic-guitar.png');
-        background-color: red;
-        background-size: 100%;
-        background-repeat: no-repeat;
+          
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          gap: 1vw;
 
-        display: flex;
-        justify-content: center;
+          h2 {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.9vw;
+          }
 
-        position: relative;
-      }
-
-      .folk-vocal {
-        min-width: 27vw;
-        height: 14vw;
-        border-radius: 2vw;
-        border: .16vw solid var(--red);
-        background: url('../assets/acoustic-guitar.png');
-        background-color: red;
-        background-size: 100%;
-        background-repeat: no-repeat;
-
-        display: flex;
-        justify-content: center;
-
-        position: relative;
-      }
-
-      .academic-vocal {
-        min-width: 27vw;
-        height: 14vw;
-        border-radius: 2vw;
-        border: .16vw solid var(--red);
-        background: url('../assets/acoustic-guitar.png');
-        background-color: red;
-        background-size: 100%;
-        background-repeat: no-repeat;
-
-        display: flex;
-        justify-content: center;
-
-        position: relative;
+          .more {
+            font-size: 1.25vw;
+            width: 10vw;
+            height: 2.16vw;
+            color: white;
+            background-color: var(--red);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 6.66vw;
+            font-weight: 300;
+          }
+        }
       }
     }
   }
@@ -1161,45 +1121,6 @@ p {
       font-size: 2vw;
       font-weight: 300;
     }
-  }
-}
-
-.card-container {
-  width: 100%;
-  height: 100%;
-  padding: 1vw 3.5vw 0;
-  border-radius: inherit;
-  position: absolute;
-  top: 0;
-  left: 0;
-  text-align: center;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 1vw;
-
-  background-color: rgba(0, 0, 0, 0.3);
-
-  div {
-    display: flex;
-    justify-content: center;
-  }
-
-  .more {
-    font-size: 1.25vw;
-    width: 10vw;
-    height: 2.16vw;
-    color: white;
-    background-color: var(--red);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    border-radius: 6.66vw;
-
-    font-weight: 300;
   }
 }
 
@@ -1432,7 +1353,7 @@ p {
   }
 }
 
-.section-6 {}
+// .section-6 {}
 
 .section-7 {
   color: white;
