--- a/style/style.scss
+++ b/style/style.scss
@@ -1023,13 +1023,14 @@ p {
       gap: 1.5vw;
 
       .card {
-        height: 14vw;
+        height: 13vw;
 
         display: flex;
         justify-content: center;
         align-items: center;
 
         position: relative;
+        overflow: hidden;
 
         .img-container {
           width: 100%;
@@ -1053,10 +1054,13 @@ p {
           gap: 1vw;
 
           h2 {
+            max-width: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
-            font-size: 1.9vw;
+            text-align: center;
+            flex-wrap: wrap;
+            font-size: 1.8vw;
           }
 
           .more {
