--- a/style/style.css
+++ b/style/style.css
@@ -925,8 +925,7 @@ p {
   font-size: 2vw;
 }
 .our-courses .our-courses__content .our-courses__card-list .card .card-container .more {
-  width: 10vw;
-  height: 2.16vw;
+  padding: 0.5vw 1vw;
   border-radius: 6.66vw;
   background-color: var(--red);
   display: flex;
@@ -1424,6 +1423,7 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.5s;
 }
 .white-button a:link,
 .white-button a:visited {
@@ -1431,20 +1431,37 @@ p {
   font-size: 1.5vw;
   font-weight: 300;
 }
+.white-button:hover {
+  background-color: var(--red);
+}
+.white-button:hover a:link,
+.white-button:hover a:visited {
+  color: white;
+}
 
 .red-button {
   padding: 0.75vw 1.6875vw;
   background-color: var(--red);
+  border: 0.16vw solid var(--red);
   border-radius: 6.66vw;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.5s;
 }
 .red-button a:link,
 .red-button a:visited {
   color: white;
   font-size: 1.5vw;
   font-weight: 300;
+}
+.red-button:hover {
+  background-color: white;
+  border: 0.16vw solid var(--red);
+}
+.red-button:hover a:link,
+.red-button:hover a:visited {
+  color: var(--red);
 }
 
 .black-button {
