--- a/style/style.css
+++ b/style/style.css
@@ -771,7 +771,6 @@ p {
 }
 
 .section-1 {
-  height: 55vw;
   background-image: url("../assets/background/main-first-section-bg.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
@@ -814,10 +813,25 @@ p {
 .section-1 .header .header__menu .header__list .header__item {
   display: grid;
   align-items: center;
+  position: relative;
 }
 .section-1 .header .header__menu .header__list .header__item a {
   font-size: 1.8vw;
   color: white;
+}
+.section-1 .header .header__menu .header__list .header__item::before {
+  content: "";
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: white;
+  transition: 0.5s;
+}
+.section-1 .header .header__menu .header__list .header__item:hover::before {
+  width: 100%;
+  height: 1px;
 }
 .section-1 .header .contacts-container {
   display: grid;
@@ -876,6 +890,9 @@ p {
   color: var(--red);
   cursor: pointer;
   transition: 0.4s;
+}
+.our-courses .our-courses__menu .our-courses__list .our-courses__item:hover {
+  transform: translateY(-5px);
 }
 .our-courses .our-courses__menu .our-courses__list .selected {
   background-color: var(--red);
@@ -1483,14 +1500,11 @@ p {
   display: block;
   width: 4.16vw;
   height: 4.16vw;
-  background-size: 5vw 5vw;
   border-radius: 6.66vw;
-  background-image: url("../assets/icons/whatsapp.png");
-  background-size: cover;
-  background-position: center center;
-  background-color: var(--red);
-  background-repeat: no-repeat;
   cursor: pointer;
+}
+.whatsapp:hover img {
+  fill: white;
 }
 
 .telegram {
@@ -1498,10 +1512,6 @@ p {
   width: 4.16vw;
   height: 4.16vw;
   border-radius: 6.66vw;
-  background-image: url("../assets/icons/telegram.png");
-  background-size: cover;
-  background-color: var(--red);
-  background-repeat: no-repeat;
   cursor: pointer;
 }
 
