--- a/style/style.scss
+++ b/style/style.scss
@@ -776,7 +776,8 @@ p {
 }
 
 .section-1 {
-  height: 55vw;
+  // height: 10vw;
+  // height: 55vw;
 
   background-image: url('../assets/background/main-first-section-bg.jpg');
   background-size: 100%;
@@ -829,10 +830,30 @@ p {
         .header__item {
           display: grid;
           align-items: center;
+          position: relative;
 
           a {
             font-size: 1.8vw;
             color: white;
+          }
+
+          &::before {
+            content: '';
+            position: absolute;
+            bottom: -2px;
+            left: 0;
+
+            width: 0;
+            height: 1px;
+            background-color: white;
+
+            transition: .5s;
+
+          }
+
+          &:hover::before {
+            width: 100%;
+            height: 1px;
           }
         }
       }
@@ -910,6 +931,10 @@ p {
 
         cursor: pointer;
         transition: .4s;
+
+        &:hover {
+          transform: translateY(-5px);
+        }
       }
 
       .selected {
@@ -1695,14 +1720,17 @@ p {
   display: block;
   width: 4.16vw;
   height: 4.16vw;
-  background-size: 5vw 5vw;
+  // background-size: 5vw 5vw;
   border-radius: 6.66vw;
-  background-image: url('../assets/icons/whatsapp.png');
-  background-size: cover;
-  background-position: center center;
-  background-color: var(--red);
-  background-repeat: no-repeat;
+  // background-image: url('../assets/icons/whatsapp.png');
+  // background-size: cover;
+  // background-position: center center;
+  // background-color: var(--red);
+  // background-repeat: no-repeat;
   cursor: pointer;
+  &:hover img {
+    fill: white;
+  }
 }
 
 .telegram {
@@ -1710,10 +1738,10 @@ p {
   width: 4.16vw;
   height: 4.16vw;
   border-radius: 6.66vw;
-  background-image: url('../assets/icons/telegram.png');
-  background-size: cover;
-  background-color: var(--red);
-  background-repeat: no-repeat;
+  // background-image: url('../assets/icons/telegram.png');
+  // background-size: cover;
+  // background-color: var(--red);
+  // background-repeat: no-repeat;
   cursor: pointer;
 }
 
