--- a/style/index.css
+++ b/style/index.css
@@ -598,13 +598,9 @@ p {
 }
 
 .unique-project {
-  color: white;
-  padding: 6.58vw 4vw 5.33vw 7.66vw;
-  background-color: black;
-  background-image: url("../assets/dance-hall.png"), url("../assets/dance-hall.png"), url("../assets/background/red-bg.jpg");
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: 37.5vw 27.1vw, 37.5vw 27.1vw, cover;
-  background-position: 100% 29.5%, 0% 68%, center center;
+  background: linear-gradient(-45deg, #710f0f, #A30000, #710f0f, #A30000, #710f0f, #A30000);
+  background-size: 400% 400%;
+  animation: gradient 8s ease infinite;
 }
 .unique-project h1 {
   padding-bottom: 5vw;
@@ -750,7 +746,7 @@ p {
   font-size: 0.75vw;
 }
 
-.our-teachers .swiper {
+.our-teachers .swiper-1 {
   padding-top: 2vw;
   padding-left: 3vw;
   padding-right: 3vw;
@@ -819,35 +815,32 @@ p {
   background-position: center center;
 }
 
-.students-pics .swiper {
-  width: 85.83vw;
+.students-pics .swiper-2 {
+  padding-top: 2vw;
+  padding-left: 3vw;
+  padding-right: 3vw;
+  padding-bottom: 2vw;
+  width: 100%;
   height: 100%;
+  display: flex;
+  justify-content: center;
 }
 .students-pics .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.students-pics .swiper-slide img {
+  display: block;
   width: 100%;
-  height: 40vw;
-  text-align: center;
-  font-size: 18px;
-  background: transparent;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.students-pics .button-container {
+  padding-top: 2vw;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  overflow: hidden;
-}
-.students-pics .swiper-slide .img-wrapper {
-  display: flex;
-  max-width: 100%;
-  height: 25.4vw;
-  overflow: hidden;
-  justify-content: center;
-  align-items: center;
-}
-.students-pics .swiper-slide .img-wrapper img {
-  max-width: 100%;
-  max-height: 100%;
-  display: flex;
-  border-radius: 3vw;
 }
 
 .wrapper {
