--- a/style/index.scss
+++ b/style/index.scss
@@ -804,14 +804,9 @@ p {
 // .section-6 {}
 
 .unique-project {
-  color: white;
-  padding: 6.58vw 4vw 5.33vw 7.66vw;
-  background-color: black;
-  background-image: url('../assets/dance-hall.png'), url('../assets/dance-hall.png'), url('../assets/background/red-bg.jpg');
-  background-repeat: no-repeat, no-repeat, no-repeat;
-  background-size: 37.5vw 27.1vw, 37.5vw 27.1vw, cover;
-  background-position: 100% 29.5%, 0% 68%, center center;
-
+  background: linear-gradient(-45deg, #710f0f, #A30000, #710f0f, #A30000, #710f0f, #A30000);
+  background-size: 400% 400%;
+  animation: gradient 8s ease infinite;
 
   h1 {
     padding-bottom: 5vw;
@@ -1024,7 +1019,7 @@ p {
 }
 
 .our-teachers {
-  .swiper {
+  .swiper-1 {
     padding-top: 2vw;
     padding-left: 3vw;
     padding-right: 3vw;
@@ -1124,42 +1119,34 @@ p {
 
 .students-pics {
 
-
-  .swiper {
-    width: 85.83vw;
-    height: 100%;
-  }
-
-  .swiper-slide {
+  .swiper-2 {
+    padding-top: 2vw;
+    padding-left: 3vw;
+    padding-right: 3vw;
+    padding-bottom: 2vw;
     width: 100%;
-    height: 40vw;
-    text-align: center;
-    font-size: 18px;
-    background: transparent;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .swiper-slide {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
-    overflow: hidden;
-
-    .img-wrapper {
-      display: flex;
-      max-width: 100%;
-      height: 25.4vw;
-      // object-fit: cover;
-      overflow: hidden;
-      justify-content: center;
-      align-items: center;
-
-      img {
-        max-width: 100%;
-        max-height: 100%;
-        display: flex;
-        border-radius: 3vw;
-
-
-      }
-    }
+  }
+  
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  
+  .button-container {
+    padding-top: 2vw;
+    display: flex;
+    justify-content: center;
   }
 }
 
