--- a/style/index.css
+++ b/style/index.css
@@ -49,24 +49,24 @@ p {
 }
 @keyframes glowingRed {
   0% {
-    box-shadow: 0 0 5px var(--red);
+    box-shadow: 0 0 0.5vw var(--red);
   }
   50% {
-    box-shadow: 0 0 15px var(--red);
+    box-shadow: 0 0 1vw var(--red);
   }
   100% {
-    box-shadow: 0 0 5px var(--red);
+    box-shadow: 0 0 0.5vw var(--red);
   }
 }
 @keyframes glowingWhite {
   0% {
-    box-shadow: 0 0 5px white;
+    box-shadow: 0 0 0.5vw white;
   }
   50% {
-    box-shadow: 0 0 15px white;
+    box-shadow: 0 0 1vw white;
   }
   100% {
-    box-shadow: 0 0 5px white;
+    box-shadow: 0 0 0.5vw white;
   }
 }
 @keyframes textIn {
@@ -679,11 +679,12 @@ p {
 .contacts .contacts__container .yandex-map {
   display: grid;
   align-items: center;
-  position: relative;
   overflow: hidden;
 }
 .contacts .contacts__container .yandex-map iframe {
   border: none;
+  width: 100%;
+  height: 100%;
 }
 
 .footer {
