--- a/style/index.scss
+++ b/style/index.scss
@@ -76,29 +76,29 @@ p {
 
 @keyframes glowingRed {
   0% {
-    box-shadow: 0 0 5px var(--red);
+    box-shadow: 0 0 0.5vw var(--red);
   }
 
   50% {
-    box-shadow: 0 0 15px var(--red);
+    box-shadow: 0 0 1vw var(--red);
   }
 
   100% {
-    box-shadow: 0 0 5px var(--red);
+    box-shadow: 0 0 0.5vw var(--red);
   }
 }
 
 @keyframes glowingWhite {
   0% {
-    box-shadow: 0 0 5px white;
+    box-shadow: 0 0 0.5vw white;
   }
 
   50% {
-    box-shadow: 0 0 15px white;
+    box-shadow: 0 0 1vw white;
   }
 
   100% {
-    box-shadow: 0 0 5px white;
+    box-shadow: 0 0 0.5vw white;
   }
 }
 
@@ -916,12 +916,14 @@ p {
     .yandex-map {
       display: grid;
       align-items: center;
-      position: relative;
+      // position: relative;
       overflow: hidden;
-
-
+      
+      
       iframe {
         border: none;
+        width: 100%;
+        height: 100%;
       }
     }
   }
